syntax = "proto3";

package proto;
option go_package = "github.com/afzalsabbir/go-todo-grpc-app/proto";

service TodoService {
  rpc CreateTodo(Todo) returns (Todo) {}
  rpc GetTodo(TodoId) returns (Todo) {}
  rpc ListTodos(Empty) returns (TodoList) {}
  rpc UpdateTodo(Todo) returns (Todo) {}
  rpc DeleteTodo(TodoId) returns (Empty) {}
}

message Empty {}

message TodoId {
  uint64 id = 1;
}

message Todo {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

message TodoList {
  repeated Todo todos = 1;
} 